[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humble-steam-redeem"
version = "0.1.0"
description = "Bulk-redeem your Humble Bundle Steam keys automatically"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "eNkrypt", email = ""},
]
keywords = ["humble", "bundle", "steam", "redeem", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "cryptography>=42.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
    "requests>=2.31.0",
    "requests-futures>=1.0.0",
    "cloudscraper>=1.2.71",
    "rich>=13.0",
    "qrcode>=7.0",
]

[project.scripts]
humble-steam-redeem = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/castanley/humble-steam-redeem"
Repository = "https://github.com/castanley/humble-steam-redeem.git"

[tool.hatch.build.targets.wheel]
packages = ["src"]
